# huawei-cloud-ddns

./: .gitignore  LICENSE  README.md  config.example.json  main.py  pyproject.toml
ddns/: ddns.py  settings.py  utils.py
