[tool.poetry]
name = "huawei-ddns"
version = "0.1.0"
description = ""
authors = ["HuoWenBo <1684240320@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic-settings = "^2.2.1"
requests = "^2.32.3"
huaweicloudsdkcore = "^3.1.98"
huaweicloudsdkdns = "^3.1.98"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
